--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg" href="src/assets/img/oneday-favicon.svg">
+    <link rel="icon" type="image/svg" href="/img/oneday-favicon.svg">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>oneday.com | Your go-to work platform</title>
   </head>
